--- a/style.css
+++ b/style.css
@@ -254,9 +254,9 @@ a {
 /*========== Home Section ==========*/
 .home__container {
     display: grid;
-    justify-items: center;
-    padding: 260px 0 0 0;
-    grid-template-rows: 15vh 30vh;
+    padding: 20% 0 0 0;
+    grid-template-columns: 55vh;
+    grid-template-rows: 15vh 24vh;
     grid-template-areas: "a b"
                          "c b";
 }
@@ -267,21 +267,21 @@ a {
 
 .home__info h2 {
     color: var(--first-alt);
-    font-size: 2.6rem;
+    font-size: 3rem;
     font-weight: inherit;
-    letter-spacing: 6px;
+    letter-spacing: 8px;
 }
 
 .home__info h1 {
+    position: absolute;
     color: var(--first);
-    font-size: 4rem;
+    font-size: 5rem;
     font-weight: bolder;
 }
 
 .home__img {
-    min-width: 500px;
-    min-height: 500px;
-    padding: 20px;
+    min-width: 580px;
+    min-height: 580px;
     grid-area: b;
 }
 
@@ -292,13 +292,13 @@ a {
 
 .home__info__button {
     display: grid;
-    max-width: 260px;
+    max-width: 314px;
     grid-area: c;
 }
 
 .home__info__button span {
     color: var(--first-alt);
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 400;
 }
 
@@ -322,28 +322,49 @@ a {
 @media screen and (max-width: 1150px) {
     .home__container {
         justify-items: center;
-        grid-template-rows: 15vh 50vh 20vh;
+        grid-template-rows: 25vh 42vh 20vh;
+        grid-template-areas: "a"
+                             "b"
+                             "c";
+    }
+
+@media screen and (max-width: 1150px) {
+    .home__container {
+        justify-items: center;
+        grid-template-rows: 25vh 42vh 20vh;
         grid-template-areas: "a"
                              "b"
                              "c";
     }
 
     .home__info h1, .home__info h2 {
+        position: relative;
         text-align: center;
     }
 
     .home__info__button {
         position: relative;
         display: flex;
+        gap: 20px;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         max-width: 480px;
     }
 
+    .home__img {
+        max-width: 500px;
+        max-height: 500px;
+        min-width: initial;
+        min-height: initial;
+    }
+
+    .home__info__button a {
+        padding: 18px;
+    }
+
     .home__info__button span {
         text-align: center;
-        margin-bottom: 20px;
         font-size: 1.8rem;
     }
 
@@ -357,6 +378,7 @@ a {
     .home__container {
         grid-template-rows: 8vh 62vw 20vh;
         grid-template-columns: 100vw;
+        justify-items: center;
         padding: 40% 0 0 0;
     }
 
@@ -370,6 +392,7 @@ a {
 
     .home__info__button span {
         font-size: 5vw;
+        padding: 0 37px;
     }
 
     .home__img {
@@ -386,6 +409,10 @@ a {
         height: auto;
     }
 
+    .home__info__button a {
+        padding: 2px;
+    }
+
     .home__info__button span {
         font-size: 4vw;
         padding: 0 20px;
@@ -395,7 +422,7 @@ a {
 /*========== Pink Section ==========*/
 .pink__container {
     position: relative;
-    width: 100%;
+    width: 100vw;
     height: 180px;
     top: 180px;
     z-index: -1;
