--- a/style.css
+++ b/style.css
@@ -415,7 +415,7 @@ a {
     position: relative;
     width: 100vw;
     height: 180px;
-    top: 180px;
+    margin-top: 10%;
     z-index: -1;
 }
 
@@ -498,4 +498,15 @@ a {
     margin-top: 20px;
     text-align: center;
     color: var(--text);
+}
+
+@media screen and (max-width: 440px) {
+    .container .card {
+        min-width: 206px;
+    }
+
+    .container .card .imgBx {
+        min-width: 221px;
+        width: initial;
+    }
 }
