--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 :root {
     --first: #654464;
-    --first-alt: #A56777;
+    --first-alt: #DD90A4;
     --pink: #FEE0FA;
     --background: #FFFFFF;
     --text: #3A3A3C;
@@ -19,7 +19,6 @@ body {
     justify-content: center;
     align-items: center;
     background: var(--background);
-    margin-bottom: 500px;
 }
 
 hmtl {
@@ -81,7 +80,7 @@ a {
         left: 0;
         width: 100%;
         background-color: #FFFFFF;
-        padding: 4rem 1.5rem 2rem;
+        padding: 4rem 0.5rem 3rem;
         box-shadow: 0 -1px 4px rgba(0,0,0,.15);
         border-radius: 0 0 1.5rem 1.5rem;
         transition: .3s;
@@ -98,7 +97,7 @@ a {
         flex-direction: column;
         align-items: center;
         font-size: .85rem;
-        color: #FF9E71;
+        color: var(--first-alt);
         font-weight: var(--font-medium);
     }
 
@@ -117,11 +116,11 @@ a {
     }
 
     .nav__toggle:hover{
-        color: var(--first-alt);
+        color: var(--first);
     }
 
     .nav__link:hover{
-        color: var(--first-alt);
+        color: var(--first);
     }
     
     .nav__icon{
@@ -130,11 +129,11 @@ a {
     
     .nav__close{
         position: absolute;
-        right: 1.15rem;
-        top: .85rem;
+        right: 2.15rem;
+        top: .80rem;
         font-size: 2rem;
         cursor: pointer;
-        color: #FF9E71;
+        color: var(--first);
     }
     
     .nav__close:hover{
@@ -148,7 +147,7 @@ a {
     
     /* Active menu */
     .active-link{
-        color: #0cb5b9;
+        color: var(--first);
     }
     
     /* Change background header */
@@ -165,11 +164,11 @@ a {
 
     .nav__close{
         position: absolute;
-        right: 1.3rem;
-        top: 1.05rem;
+        right: 2.3rem;
+        top: 0.9rem;
         font-size: 1.5rem;
         cursor: pointer;
-        color: #FF9E71;
+        color: var(--first);
     }
 }
 
@@ -235,7 +234,7 @@ a {
     }
 
     .nav__link:hover {
-        color: #0CB5B9;
+        color: var(--first);
         font-weight: 500;
     }
 }
@@ -426,6 +425,28 @@ a {
 }
 
 /*========== Polaroid Section ==========*/
+.polaroid__section {
+    display: grid;
+    justify-items: center;
+}
+
+.polaroid__title {
+    display: grid;
+    justify-items: center;
+    margin-top: 10%;
+}
+
+.polaroid__title h2 {
+    font-size: 2.5rem;
+    color: var(--first);
+}
+
+.polaroid__title h3 {
+    font-size: 1.3rem;
+    color: var(--first-alt);
+    font-weight: 400;
+}
+
 .container {
     position: relative;
     display: flex;
@@ -433,7 +454,7 @@ a {
     align-items: center;
     flex-wrap: wrap;
     padding: 30px;
-    padding-top: 200px;
+    padding-top: 60px;
 }
 
 .container .card {
@@ -509,4 +530,47 @@ a {
         min-width: 221px;
         width: initial;
     }
+
+    .polaroid__title {
+        display: grid;
+        justify-items: center;
+        margin-top: 20%;
+    }
+    
+    .polaroid__title h2 {
+        font-size: 2em;
+        color: var(--first);
+    }
+    
+    .polaroid__title h3 {
+        font-size: 1rem;
+        color: var(--first-alt);
+        font-weight: 400;
+    }
+}
+
+/*========== Footer Section ==========*/
+.footer {
+    display: grid;
+    align-content: space-between;
+    justify-items: center;
+    padding: 30px 0 10px;
+    justify-content: center;
+    width: 100%;
+    height: 118px;
+    margin-top: 90px;
+    background: var(--pink);
+}
+
+.footer p, .footer span{
+    color: var(--first);
+}
+
+.footer span {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.footer p {
+    font-size: .8rem;
 }
